--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,6 +5,11 @@
     .col-content {
         width: 100%;
     }
+
+    .day {
+        background-color: #002699;
+        color: white;
+    }
 }
 
 @media only screen and (min-width: 811px) {
